--- a/Pages/EditStore.cshtml
+++ b/Pages/EditStore.cshtml
@@ -89,6 +89,7 @@
                                 <label class="my-1 me-2" for="StoreType">@Model.lblWarehouseType</label>
                                 <select class="form-select" id="StoreType" name="StoreType"
                                         aria-label="Default select example" >
+                                    <option value=""></option>
                                      @if (Model.StoreTypeList != null)
                                     {
                                         foreach (var item in Model.StoreTypeList)
