--- a/Pages/EditItem.cshtml
+++ b/Pages/EditItem.cshtml
@@ -75,7 +75,7 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
-                            <a href="/ManageItems?page=@Model.page&FromDate=@Model.FromDate&ToDate=@Model.ToDate" class="text-decoration-none">@Model.lblItems</a>
+                            <a href="/ManageItems?page=@Model.page&ItemName=@Model.ItemNameSearch&Group=@Model.GroupSearch&FromDate=@Model.FromDate&ToDate=@Model.ToDate" class="text-decoration-none">@Model.lblItems</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
