--- a/Pages/EditStorage.cshtml
+++ b/Pages/EditStorage.cshtml
@@ -57,7 +57,7 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
-                             <a href="/ManageStorage?page=@Model.page" class="text-decoration-none">@Model.lblStorage</a>
+                             <a href="/ManageStorage?page=@Model.page&StoreNumber=@Model.StoreNumberSearch&StoreName=@Model.StoreNameSearch&Item=@Model.Item" class="text-decoration-none">@Model.lblStorage</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
