--- a/Pages/EditUser.cshtml
+++ b/Pages/EditUser.cshtml
@@ -101,7 +101,7 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
-                            <a href="/ManageUsers?page=@Model.page" class="text-decoration-none">@Model.lblUsers</a>
+                            <a href="/ManageUsers?page=@Model.page&UserName=@Model.UserNameSearch" class="text-decoration-none">@Model.lblUsers</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
