--- a/Pages/ManageStorage.cshtml
+++ b/Pages/ManageStorage.cshtml
@@ -256,6 +256,9 @@
 
 
                                             <input type="hidden" value="@Model.CurrentPage" name="page" />
+                                            <input type="hidden" value="@Model.StoreNumber" name="StoreNumber" />
+                                            <input type="hidden" value="@Model.StoreName" name="StoreName" />
+                                            <input type="hidden" value="@Model.Item" name="Item" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                 asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
