--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -202,6 +202,7 @@
                             <form method="post">
                                 <input type="hidden" value="@Model.CurrentPage" name="page" />
                                 <input type="hidden" value="@item.SupplierId" name="SupplierId" />
+                                <input type="hidden" value="@Model.SupplierName" name="SupplierName" />
                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
                                 <input type="submit" value="@Model.lblDelete" class="btn btn-danger" asp-page-handler="Delete" />
                             </form>
