--- a/Pages/EditStore.cshtml
+++ b/Pages/EditStore.cshtml
@@ -53,7 +53,7 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
-                            <a href="/ManageStore?page=@Model.page" class="text-decoration-none">@Model.lblStores</a>
+                            <a href="/ManageStore?page=@Model.page&StoreNumber=@Model.StoreNumberSearch&StoreName=@Model.StoreNameSearch" class="text-decoration-none">@Model.lblStores</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
