--- a/Pages/EditUnit.cshtml
+++ b/Pages/EditUnit.cshtml
@@ -57,7 +57,7 @@
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
-                            <a href="/ManageUnits?page=@Model.page" class="text-decoration-none">@Model.lblUnits</a>
+                            <a href="/ManageUnits?page=@Model.page&UnitDesc=@Model.UnitDescSearch" class="text-decoration-none">@Model.lblUnits</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
