--- a/Pages/ManageRooms.cshtml
+++ b/Pages/ManageRooms.cshtml
@@ -201,6 +201,7 @@
                                         <form method="post">
                                             <input type="hidden" value="@item.RoomId" name="RoomId" />
                                             <input type="hidden" value="@Model.CurrentPage" name="page" />
+                                            <input type="hidden" value="@Model.RoomName" name="RoomName" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                    asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
