--- a/Pages/ManageShelves.cshtml
+++ b/Pages/ManageShelves.cshtml
@@ -196,6 +196,7 @@
                                         <form method="post">
                                             <input type="hidden" value="@shelf.ShelfId" name="ShelfId" />
                                             <input type="hidden" value="@Model.CurrentPage" name="page" />
+                                             <input type="hidden" value="@Model.ShelfNumber" name="ShelfNumber" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                    asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
