--- a/Pages/ManageUnits.cshtml
+++ b/Pages/ManageUnits.cshtml
@@ -193,6 +193,7 @@
                                     <td>
                                         <form method="post">
                                             <input type="hidden" value="@Model.CurrentPage" name="page" />
+                                            <input type="hidden" value="@Model.UnitDesc" name="UnitDesc" />
                                             <input type="hidden" value="@item.ID" name="ID" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                 asp-page-handler="Edit" />
