--- a/Pages/ManageUserGroups.cshtml
+++ b/Pages/ManageUserGroups.cshtml
@@ -129,6 +129,7 @@
                                         <form method="post">
                                             <input type="hidden" value="@item.UserGroupID" name="UserGroupID" />
                                             <input type="hidden" value="@Model.CurrentPage" name="page" />
+                                            <input type="hidden" value="@Model.UserGroupName" name="UserGroupName" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                 asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
