--- a/Pages/Supplies.cshtml
+++ b/Pages/Supplies.cshtml
@@ -66,7 +66,16 @@
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
         <div class="btn-toolbar mb-2 mb-md-0">
+                    <div class="btn-group">
+
+                        <a href="AddSupply" class="btn btn-sm justify-content-center d-flex btn-gray-800 d-inline-flex align-items-center">
+                            <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
+
+                            @Model.lblNewReceivingReport
+                        </a>
+                    </div>
                     <div class="btn-group mx-3 ms-lg-3">
+                        
                         <a href="AddSupply" class="btn btn-sm justify-content-center top-sm-btn d-flex btn-gray-800 d-inline-flex align-items-center">
                             <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
 
