--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -265,7 +265,7 @@
     <div class="card border-0 shadow mb-4">
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-centered table-nowrap mb-0 rounded">
+                <table class="table table-centered table-sm table-hover align-middle table-nowrap mb-0 rounded">
                     <thead class="thead-light">
                         <tr>
                             <th scope="col" class="border-0 rounded-start">@Model.lblItemCode</th>
