--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -132,7 +132,7 @@
 
             <div class="col text-end position-relative mt-3 mt-md-0">
                 <button type="button" id="toggleDropdown" class="btn btn-secondary">
-                    Show/Hide Columns
+                    @Model.lblShowHideColumn
                 </button>
         
                 <!-- Dropdown Panel -->
