--- a/Pages/ManageDamaged.cshtml
+++ b/Pages/ManageDamaged.cshtml
@@ -96,7 +96,7 @@
 
             <div class="col text-end position-relative">
                 <button type="button" id="toggleDropdown" class="btn btn-secondary">
-                    Show/Hide Columns
+                    @Model.lblShowHideColumn
                 </button>
 
                 <!-- DROPDOWN PANEL GOES HERE -->
