--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -168,7 +168,7 @@
                 <div class="col-6 col-md-3 text-end ms-auto">
                     <div class="position-relative">
                         <button class="btn btn-secondary btn-sm" id="toggleDropdown" type="button">
-                            Show/Hide Columns
+                            @Model.lblShowHideColumn
                         </button>
 
                         <div id="dropdownPanel" class="card p-2 shadow-sm position-absolute"
