--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -160,7 +160,7 @@
             <div class="col-6 col-md-3 col-lg-2 col-xl-2 d-grid text-end">
                 <div class="position-relative">
                     <button class="btn btn-secondary btn-sm" id="toggleDropdown" type="button">
-                        Show/Hide Columns
+                        @Model.lblShowHideColumn
                     </button>
 
                     <div id="dropdownPanel" class="card p-2 shadow-sm position-absolute"
